gitlab-pages/website/versioned_docs/version-0.45.0/manpages/repl.md

### SYNOPSIS
ligo repl SYNTAX

### DESCRIPTION
REPL (Read-Eval-Print-Loop) for LIGO

### FLAGS
**--amount INT**
the tezos amount the Michelson interpreter will use for the transaction.

**--balance INT**
the balance the Michelson interpreter will use for the contract balance.

**--display-format FORMAT**
the format that will be used by the CLI. Available formats are 'dev', 'json', and 'human-readable' (default). When human-readable lacks details (we are still tweaking it), please contact us and use another format in the meanwhile. (alias: --format)

**--init-file FILENAME**
the path to the smart contract file to be used for context initialization.

**--now TIMESTAMP**
the NOW value the Michelson interpreter will use (e.g. '2000-01-01T10:10:10Z')

**--project-root PATH**
The path to root of the project.

**--sender ADDRESS**
the sender the Michelson interpreter transaction will use.

**--source ADDRESS**
the source the Michelson interpreter transaction will use.

**-p PROTOCOL**
choose protocol's types/values pre-loaded into the LIGO environment (jakarta , ithaca). By default, the current protocol (ithaca) will be used (alias: --protocol)

**-help**
print this help text and exit (alias: -?)


